applications/app-k8s/discovery-server/discovery-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  labels:
    app: discovery-server
spec:
  selector:
    matchLabels:
      app: discovery-server
  replicas: 2
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: discovery-server
        image: ghcr.io/stefanfilkov/petclinic/discovery-server:latest
        imagePullPolicy: "Always"
        resources:
          limits:
            memory: "512Mi"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  labels:
    app: discovery-server
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    name: "discovery-server"
  selector:
    app: discovery-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discovery-server
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/server-tokens: "false"
    nginx.ingress.kubernetes.io/fail-timeout: "45s"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - discovery-server.domashno.party
      secretName: wild-tinqin-prp-be-ys-net
  rules:
    - host: discovery-server.domashno.party
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: discovery-server
                port:
                  number: 8080
